--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@radix-ui/react-select": "^2.1.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@tanstack/react-table": "^8.17.3",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "daisyui": "^4.11.1",
     "date-fns": "^3.6.0",
     "formik": "^2.4.6",
@@ -38,12 +40,14 @@
     "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "react-to-print": "^2.15.1",
     "sonner": "^1.5.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
     "vaul": "^0.9.1",
+    "xlsx": "^0.18.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
