--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:root@localhost:3306/cekrek"
+DATABASE_URL="mysql://root:@localhost:3306/cekrek"
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="cekrek-helov"
 JWT_SECRET="cekrek-helov"
