--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@radix-ui/react-select": "^2.1.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@tanstack/react-query": "^5.48.0",
     "@tanstack/react-table": "^8.17.3",
     "@types/bcrypt": "^5.0.2",
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
@@ -32,6 +34,7 @@
     "cmdk": "^1.0.0",
     "daisyui": "^4.11.1",
     "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.1.5",
     "formik": "^2.4.6",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
@@ -42,7 +45,6 @@
     "react-dom": "^18",
     "react-to-print": "^2.15.1",
     "sonner": "^1.5.0",
-    "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
