--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@radix-ui/react-select": "^2.1.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.1.0",
-    "@tanstack/react-query": "^5.48.0",
     "@tanstack/react-table": "^8.17.3",
     "@types/bcrypt": "^5.0.2",
     "axios": "^1.7.2",
@@ -45,6 +44,7 @@
     "react-dom": "^18",
     "react-to-print": "^2.15.1",
     "sonner": "^1.5.0",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
