banyak yg gw tambah

--- a/.env
+++ b/.env
@@ -6,5 +6,6 @@
 
 DATABASE_URL="mysql://root:@localhost:3306/cekrek"
 NEXTAUTH_URL="http://localhost:3000"
+NEXT_PUBLIC_URL="http://localhost:3000"
 NEXTAUTH_SECRET="cekrek-helov"
 JWT_SECRET="cekrek-helov"
