--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "daisyui": "^4.11.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.5",
+    "formidable": "^3.5.1",
     "formik": "^2.4.6",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
@@ -63,6 +64,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
