--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root@localhost:3306/cekrek"
-# DATABASE_URL="mysql://avnadmin:AVNS_mJqtOZ6i49qYYyv2C3-@cekrek-silar.g.aivencloud.com:27623/defaultdb?ssl-mode=REQUIRED" 
+# DATABASE_URL="mysql://root@localhost:3306/cekrek"
+DATABASE_URL="mysql://avnadmin:AVNS_mJqtOZ6i49qYYyv2C3-@cekrek-silar.g.aivencloud.com:27623/defaultdb?ssl-mode=REQUIRED" 
 NEXTAUTH_URL="http://localhost:3000"
 NEXT_PUBLIC_URL="http://localhost:3000"
 NEXTAUTH_SECRET="cekrek-helov"
