--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "formik": "^2.4.6",
         "next": "14.2.3",
         "next-auth": "^4.24.7",
+        "next-themes": "^0.3.0",
         "prisma": "^5.13.0",
         "react": "^18.3.1",
         "react-chartjs-2": "^5.2.0",
