--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ NEXTAUTH_URL="http://localhost:3000"
 NEXT_PUBLIC_URL="http://localhost:3000"
 NEXTAUTH_SECRET="cekrek-helov"
 JWT_SECRET="cekrek-helov"
+GEMINI_API_KEY="AIzaSyA1T6WZR5a10bTXudP1WRMTp6mUHg2SJJw"
