--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "cekrek",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://cek-rek.com/",
     "scripts": {
         "dev": "next dev",
         "build": "prisma generate && next build",
@@ -29,6 +30,7 @@
         "@radix-ui/react-tabs": "^1.1.0",
         "@radix-ui/react-toggle": "^1.1.0",
         "@radix-ui/react-tooltip": "^1.1.2",
+        "@tanstack/react-query": "^5.51.15",
         "@tanstack/react-table": "^8.17.3",
         "@tiptap/extension-image": "^2.4.0",
         "@tiptap/extension-link": "^2.4.0",
